fix horizontal scroll issue

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -16,6 +16,7 @@ body {
     color: $grayishBlue;
     line-height: 1.3;
     min-height: 200vh;
+    overflow-x: hidden;
 
     @include breakpoint-up(large){
         font-size: $font-med;
